  * make AllowRule a subclass of UrlRule
    Changed: wc/filter/rule/AllowRule.py, wc/filter/Blocker.py,
      templates/classic/macros/rules.html
  * remove unnecessary bits from the dns library
    Removed: wc/proxy/dns/{lazy,Base,win32dns}.py
    Changed: wc/proxy/dns/*.py
  * corrected the reversed google cache urls
    Changed: templates/classic/google.html

2.4 (released 1.11.2003)
  * merge upstream CVS changes of libjs (spidermonkey) as of 20031101
    Changed: js/*
  * enabled persistent client connections
    Changed: wc/proxy/{HttpClient,Connection}.py
  * new connection logger for printing all sent/received connection
    data for debugging
    Changed: wc/log.py, wc/proxy/Connection.py, config/logging.conf
  * enabled CONNECT tunneling; WebCleaner can now be a HTTPS proxy
    Changed: wc/proxy/[ClientServerMatchmaker,HttpClient,HttpServer}.py
  * updated .zap filter for https urls
    Changed: config/adverts{_specific,}.zap
  * added script to parser AdZapper squid_redirect files
    Added: config/adzap2wc.py
  * use python regex backreference expanding instead of named groups
    Changed: config/redirects.zap, wc/filter/rule/RewriteRule.py
  * in Block/AllowRule merge all url attributes into a single url regex
    Changed: wc/filter/rule/*.py, config/filter.dtd,
      templates/classic/macros/rules.html,
      templates/classic/filterconfig.html,
      wc/gui/FX{Allow,Block}RuleFrame.py,
      wc/webgui/context/filterconfig_html.py
  * fix bug in XML character data decoding
    Changed: wc/__init__.py, wc/filter/rule/*.py
  * optimize rule sorting; sort only once after config read; rule.oid
    is now generated dynamically, updated *.zap files accordingly
    Changed: wc/__init__.py, wc/filter/__init__.py, wc/filter/rules/*.py,
      config/filter.dtd, config/*.zap
  * limit number of displayed folder rules, added prev/next stuff
    Changed: wc/webgui/context/filterconfig_html.py,
      templates/classic/filterconfig.html

2.3 (released 21.10.2003)